--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,27 @@ body {
   overflow: hidden;
 }
 
+img {
+  display: block;
+}
+
+#root {
+  position: relative;
+  max-width: 1440px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.card-container {
+  width: 30%;
+}
+
 .card-front,
 .card-back {
   position: relative;
+  border-radius: 1rem;
+  box-shadow: 0 0 2rem hsla(0, 0%, 0%, 0.2);
 }
 
 .card-front > div,
@@ -41,13 +59,14 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
 }
 
 .card-front {
   top: 10rem;
-  left: 10%;
+  left: 5rem;
+  color: var(--white);
 }
 
 .card-front > div {
@@ -56,5 +75,7 @@ body {
 
 .card-back {
   top: 12rem;
-  left: 15%;
+  left: 10rem;
+
+  border: 1px solid var(--gradient);
 }
