--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ input[type="text"] {
   width: 100%;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
-  border: 1px solid var(--light-grayish-violet);
+  border: 2px solid var(--light-grayish-violet);
   margin-bottom: 1rem;
   font-size: 1rem;
 }
@@ -128,13 +128,14 @@ button:disabled {
   margin-bottom: 2rem;
 }
 
-.card-front-logo-and-text,
+.card-front > div,
 .card-back > div {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 100%;
+  user-select: none;
 }
 
 .card-front-logo-and-text {
